--- a/index.html
+++ b/index.html
@@ -1,124 +1,156 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<!doctype html>
+<html dir="rtl">
 <head>
-<meta charset="UTF-8">
+<meta charset="utf-8">
 <title>أذكار المسلم</title>
-<link href="images/favicon.png" rel="icon" type="image/x-icon" />
-<style>
-body {
-    padding-left: 50 px;
-    padding-right: 50 px;
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+	<link href="images/favicon.png" rel="icon" type="image/x-icon" />
+	<style>
+		.body{
+	padding-left: 100px;
+	padding-right: 100px;
 }
+		.menufor{
+			text-align: center;
+			background-color:#312F2F;
+			padding: 20px;
+		}
+		h1{
+color: aliceblue;
+font-size: 36px;
+		}
+		.omar{
+			text-align: center;
+			background-color:#565151;
+			padding: 15px;
+		}
+		.omar a{
+		color:aliceblue;
+text-decoration: none;		
+			padding: 15px;
 
-.menufor{
-    text-align: center;
-    background-color:#312F2F;
-    padding: 20 px;
-}
-
-h1{
-    color: aliceblue;
-    font-size: 36 px;
-}
-
-.omar{
-    text-align: center;
-    background-color:#565151;
-    padding: 15 px;
-}
-
-.omar a{
-    color: aliceblue;
-    text-decoration: none;
-    padding: 15 px;
-}
-
-.omar a:hover{
-    background-color:#A9A6A6;
-}
-
-.imgta{
-    border: solid white 2 px;
-    box-shadow: 5 px 5 px 10 px black; 
-    border-radius: 15 px;
-    width: 289 px;
-}
-
-img{
-    box-shadow: 1 px 1 px 0 px black;
-}
-
-.ali{
-    text-decoration: none;		
-    padding: 15 px;
-}
-</style>
+		}
+		.omar a:hover{
+			background-color:#A9A6A6;
+			
+		}
+		.imgta{
+			border: solid white 2px;
+			box-shadow: 5px 5px 10px black; 
+			border-radius: 15px;
+			
+			
+			
+			width: 289px;
+			
+				
+		}
+		img{
+			box-shadow: 1px 1px 0px black;
+		}
+		.ali{
+			 text-decoration: none;		
+			padding: 15px;
+		}
+	</style>
+	
 </head>
 
 <body>
-<div class="menufor">	
-    <h1>أذكار المسلم</h1>
-    <img src="images/أذكار المسلم.jpg" width="550" alt=""/>
-</div>
+	<div class="menufor" >	
+		<h1>أذكار المسلم</h1>
+<img src="images/أذكار المسلم.jpg" width="550" height="" alt=""/> </div>
+	<div class="omar">
+	<a href="#ti1">أذكار الصباح</a>
+	<a href="#ti2">أذكار المساء</a>
+	<a href="#ti3">أذكار النوم</a>
+	<a href="#ti4">أذكار السفر</a>
 
-<div class="omar">
-    <a href="#ti1">أذكار الصباح</a>
-    <a href="#ti2">أذكار المساء</a>
-    <a href="#ti3">أذكار النوم</a>
-    <a href="#ti4">أذكار السفر</a>
-</div>
-
-<p><span style="font-size: 18 px">فضّل الله تعالى الإنسان على بقية الكائنات الحية الأخرى بالعقل واللسان، ويمكن استخدام هذا الإنسان فيما يرضي الله أو في الأمور الآثمة، ولكن في كل الحالات هو محاسبٌ على ما يخرج من اللسان، لذلك فمن الأنجى استخدامه فيما يرضي الله، ومن الأعمال التي يمكن للإنسان استغلال اللسان بها ذِكر الله عزوجل.</span></p>
+	</div>
+	<p> <span style="font-size: 18px"> فضّل الله تعالى الإنسان على بقية الكائنات الحية الأخرى بالعقل واللسان ، ويمكن استخدام هذا الإنسان فيما يرضي الله أو في الأمور الآثمة، ولكن في كل الحالات هو محاسبٌ على ما يخرج من اللسان، لذلك فمن الأنجى استخدامه فيما يرضي الله، ومن الأعمال التي يمكن للإنسان استغلال اللسان بها ذِكر الله عزوجل</span>. </p>
 
 <h2 id="ti1">أذكار الصباح</h2>
-<p class="imgta">
-    <img src="images/image1.jpg" width="280" alt=""/>
+	<p class="imgta">
+<img src="images/image1.jpg" width="280" height="" alt=""/>
+		</p>
+	<p>
+	وردت الكثير من الأذكار المتعلّقة بالصباح في السنةالنبوية الشريفة، وفيما يأتي ذكرها:
 </p>
-<p>وردت الكثير من الأذكار المتعلّقة بالصباح في السنة النبوية الشريفة، وفيما يأتي ذكرها:</p>
-<ul>
-    <li>(أَصبَحْنا على فِطرةِ الإسلامِ، وعلى كَلِمةِ الإخلاصِ، وعلى دِينِ نَبيِّنا محمَّدٍ صلَّى اللهُ عليه وسلَّمَ، وعلى مِلَّةِ أبِينا إبراهيمَ، حَنيفًا مُسلِمًا، وما كان مِنَ المُشرِكينَ).</li>
-    <li>(بسمِ اللهِ الذي لا يَضرُ مع اسمِه شيءٌ في الأرضِ ولا في السماءِ وهو السميعُ العليمُ) ثلاث مرات.</li>
-    <li>سبحانَ اللَّهِ وبحمدِه لا قوَّةَ إلَّا باللَّهِ ...</li>
-    <li>(اللَّهمَّ بِكَ أصبَحنا، وبِكَ أمسَينا، وبِكَ نحيا وبِكَ نموتُ وإليكَ المصيرُ)...</li>
-    <li>(رَضيتُ باللَّهِ ربًّا، وبالإسلامِ دينًا، وبِمُحمَّدٍ رسولًا)...</li>
+	<ul style="https://fonts.google.com/specimen/Cairo">
+	 <li>(أَصبَحْنا على فِطرةِ الإسلامِ، وعلى كَلِمةِ الإخلاصِ، وعلى دِينِ نَبيِّنا محمَّدٍ صلَّى اللهُ عليه وسلَّمَ، وعلى مِلَّةِ أبِينا إبراهيمَ، حَنيفًا مُسلِمًا، وما كان مِنَ المُشرِكينَ).
+</li>
+	 <li>(بسمِ اللهِ الذي لا يَضرُ مع اسمِه شيءٌ في الأرضِ ولا في السماءِ وهو السميعُ العليمِ).(ثلاثُ مراتٍ).
+
+</li>
+		<li>سبحانَ اللَّهِ وبحمدِه لا قوَّةَ إلَّا باللَّهِ/ ما شاءَ اللَّهُ كانَ وما لم يشأ لم يَكن/ أعلمُ أنَّ اللَّهَ على كلِّ شيءٍ قديرٌ وأنَّ اللَّهَ قد أحاطَ بِكلِّ شيءٍ علمًا)/ فإنَّهُ من قالَها حينَ يصبِحُ حُفِظَ حتَّى يمسيَ ومن قالَها حينَ يمسي حُفِظَ حتَّى يصبِحَ.
+		 </li>
+		<li>(سبحانَ اللَّهِ وبحمدِهِ مئةَ مرَّةٍ).
+</li>
+		<li>(اللَّهمَّ بِكَ أصبَحنا، وبِكَ أمسَينا، وبِكَ نحيا وبِكَ نموتُ وإليكَ المصيرُ، وإذا أمسَى فليقُلْ: اللَّهمَّ بِكَ أمسَينا وبِكَ أصبَحنا وبِكَ نحيا وبِكَ نموتُ وإليكَ النُّشورُ).
+</li>
+		<li>(رَضيتُ باللَّهِ ربًّا، وبالإسلامِ دينًا، وبِمُحمَّدٍ رسولًا)، من قالها وجبت له الجنة.
+</li>
+		<li>(اللَّهمَّ عالِمَ الغَيبِ والشَّهادةِ، فاطرَ السَّمواتِ والأرضِ، رَبَّ كلِّ شيءٍ ومَليكَهُ، أشهدُ أن لا إلَهَ إلَّا أنتَ، أعوذُ بِكَ مِن شرِّ نفسي وشرِّ الشَّيطانِ وشِركِهِ، قلهُ إذا أصبَحتَ، وإذا أمسَيتَ، وإذا أخَذتَ مَضجعَكَ).
+</li>
+
+		<li>(اللَّهمَّ ما أصبحَ بي من نعمةٍ أو بأحدٍ من خلقِكَ فمنكَ وحدَكَ لا شريكَ لكَ فلكَ الحمدُ ولكَ الشُّكرُ). فمن قالها عندما يُصبح فقد أدَّى شكرَ يومِهِ، ومن قالَ مثلَ ذلكَ حين يمسي فقد أدَّى شكرَ ليلتِهِ.
+</li>
+		<li>(سُبْحَانَ اللهِ وَبِحَمْدِهِ، عَدَدَ خَلْقِهِ وَرِضَا نَفْسِهِ وَزِنَةَ عَرْشِهِ وَمِدَادَ كَلِمَاتِهِ)، وهي تُقال ثلاث مرات.
+</li>
+		<li>(حَسبيَ اللهُ لا إلهَ إلَّا هو، عليه تَوكَّلْتُ، وهو ربُّ العَرشِ العظيمِ)، سَبعَ مراتٍ، فمن قالها كَفاه اللهُ ما أهَمَّه من أمرِ الدُّنيا والآخِرةِ.
+</li>
+		<li>(اللَّهُمَّ إنِّي أصبَحتُ أُشهِدُك، وأُشهِدُ حَمَلةَ عَرشِكَ، ومَلائِكَتَك، وجميعَ خَلقِكَ: أنَّكَ أنتَ اللهُ لا إلهَ إلَّا أنتَ، وأنَّ مُحمَّدًا عبدُكَ ورسولُكَ).
+</li>
+		<li>(اللهمَّ ما أصبحَ بي منْ نعمةٍ أو بأحدٍ منْ خلقِكَ فمنكَ وحدكَ لا شريكَ لكَ، فلك الحمدُ ولك الشُّكر)، من قالها حين يصبح وحين يمسي فقد أدى شكرَ ذلك اليومَ.
+</li>
+		<li>(أَصْـبَحْنا وَأَصْـبَحَ المُـلْكُ لله وَالحَمدُ لله، لا إلهَ إلاّ اللّهُ وَحدَهُ لا شَريكَ لهُ، لهُ المُـلكُ ولهُ الحَمْـد، وهُوَ على كلّ شَيءٍ قديرٍ، رَبِّ أسْـأَلُـكَ خَـيرَ ما في هـذا اليوم وَخَـيرَ ما بَعْـدَه، وَأَعـوذُ بِكَ مِنَ الْكَسَـلِ وَسـوءِ الْكِـبَر ، رَبِّ أَعـوذُ بِكَ مِنَ الْعَـذابٍ في النّـارِ وَعَـذابٍ في القَـبْر).
+</li>
+		<li>اللَّهُمَّ صَلِّ وَسَلِّمْ وَبَارِكْ على نَبِيِّنَا مُحمَّد، فقد جاء في الحديث: (مَن صلى عَلَيَّ حين يُصْبِحُ عَشْرًا، وحين يُمْسِي عَشْرًا أَدْرَكَتْه شفاعتي يومَ القيامةِ).
+</li>
+		<li>(أستغفرُ اللهَ العظيمَ الذي لا إلهَ إلَّا هو الحيَّ القيومَ وأتوبُ إليه).
+</li>
+		<li>(لا إلهَ إلَّا اللهُ وحدَه لا شريكَ له له الملكُ وله الحمدُ وهو على كلِّ شيءٍ قديرٌ).
+</li>
+
 </ul>
-
-<h3 id="ti2">أذكار المساء</h3>
-<p class="imgta">
-    <img src="images/image2.jpg" width="280" alt=""/>
-</p>
-<p>وردت الكثير من الأذكار المتعلّقة بالمساء في السنة النبوية الشريفة، ومنها:</p>
-<ul>
-    <li>أَمْسَيْـنا وَأَمْسـى المـلكُ لله وَالحَمدُ لله ...</li>
-    <li>اللّهُـمَّ إِنِّـي أَمسيتُ أُشْـهِدُك ...</li>
-    <li>اللّهُـمَّ ما أَمسى بي مِـنْ نِعْـمَةٍ ...</li>
+<h3 id="ti2">أذكار المساء
+</h3>
+	<p class="imgta">
+<img src="images/image2.jpg" width="280" height="" alt=""/> </p>
+	 وردت الكثير من الأذكار المتعلّقة بالمساء في السنة النبوية الشريفة، وفيما يأتي ذكر بعضها:
+	 <ul>
+			<li>أَمْسَيْـنا وَأَمْسـى المـلكُ لله وَالحَمدُ لله ...</li>
+			 <li>اللّهُـمَّ إِنِّـي أَمْسيتُ أُشْـهِدُك ...</li>
+			 <li> اللّهُـمَّ ما أَمسى بي مِـنْ نِعْـمَةٍ ...</li>
+			
 </ul>
-
-<h5 id="ti3">أذكار النوم</h5>
-<p class="imgta">
-    <img src="images/image3.jpg" width="280" alt=""/>
-</p>
+<h5 id="ti3" style="font-size: 18px">أذكار النوم
+</h5>
+	<p class="imgta">
+<img src="images/image3.jpg" width="280" height="" alt=""/></p>
 <ul>
-    <li>بِاسْمِكَ رَبِّـي وَضَعْـتُ جَنْـبي ...</li>
-    <li>اللّهُـمَّ إِنَّـكَ خَلَـقْتَ نَفْسـي ...</li>
-    <li>بِاسْـمِكَ اللّهُـمَّ أَمـوتُ وَأَحْـيا ...</li>
+<li> بِاسْمِكَ رَبِّـي وَضَعْـتُ جَنْـبي ...</li>
+<li>اللّهُـمَّ إِنَّـكَ خَلَـقْتَ نَفْسـي ...</li>
+		 <li>بِاسْـمِكَ اللّهُـمَّ أَمـوتُ وَأَحْـيا ...</li>
+		 
 </ul>
-
-<h6 id="ti4">أذكار السفر</h6>
+<h6 id="ti4" style="font-size: 18px">أذكار السفر </h6>
+	
+	
 <p class="imgta">
-    <img src="images/image4.jpg" width="280" alt=""/> 
+	<img src="images/image4.jpg" width="280" height="" alt=""/> 
+	</p>
+<p>
+	روى مسلم في صحيحه عن ابْنَ عُمَرَ أَنّ رَسُولَ اللّهِ صلى الله عليه وسلم ...
 </p>
-<p>روى مسلم في صحيحه عن ابْنَ عُمَرَ أَنّ رَسُولَ اللّهِ صلى الله عليه وسلم ...</p>
-
-<img src="images/logo.png" width="40" alt=""/>
-<br><br>
-<span style="font-size: 36 px; color: #E30003;">
-    <a href="https://alazkar.today/">موقع أذكار اليوم</a>
-</span>
-
-<div class="omar" style="color: #FFFFFF">الكلية الجامعية للعلوم التطبيقية - الامتحان النهائي 2025</div>
-
+	<img src="images/logo.png" width="40" height="" alt=""/>
+	
+	<span style="font-size: 36px; color: #E30003;">
+	 
+	 <a href="https://alazkar.today/"> موقع أذكاراليوم</a></span> 
+	
+	
+<div class="omar" style="color: #FFFFFF"> الكلية الجامعية للعلوم 
+		التطبيقية - الامتحان النهائي 2025
+	</div>
 </body>
 </html>
